client/assets/sass/_variables.sass
$animationDuration: 2s

$text-color:           rgb(113,113,113)
$app-gray:             #888888


$app-color:            rgb(69, 104, 142)
$app-color-light:      rgb(83, 126, 173)
$app-color-lighter:    rgb(91, 145, 204)
$app-background-color: #f1f1f1


$nav-color:            $app-color
$nav-text-color:       white
$nav-title-color:      white

//$nav-color:            white
//$nav-text-color:       $text-color
//$nav-title-color:      $app-color




$clin-app-color:       $app-color
$nav-color-clin:       white
$nav-text-color-clin:  $text-color
$nav-title-color-clin: $clin-app-color

$amber-lighten-5:  #FFF8E1
$amber-lighten-4:  #FFECB3
$amber-lighten-3:  #FFE082
$amber-lighten-2:  #FFD54F
$amber-lighten-1:  #FFCA28
$amber-darken-1:   #FFB300

$lime:             #CDDC39
$lime-lighten-1:   #D4E157
$lime-darken-1:    #C0CA33

$app-accent-color:    $amber-darken-1






$link-color:           $app-color-light

$info-color:            $amber-lighten-4
$info-color-dark:       $amber-lighten-3

$welcome-header-color:      $app-color-light
$welcome-accent-color:      $app-accent-color
$welcome-border-color:      #ededed

$play-button-color:         #c6c6c6

$default-badge-color:       $app-gray
$light-badge-color:         #adabab

$active-menu-background-color:  rgba(0,0,0,0.12)
$hover-menu-background-color:   rgba(0,0,0,0.06)


$tooltip-label-color:           #888787
$tooltip-text-color:            $text-color

$current-color:                 rgb(53, 134, 192)
$current-frame-color:           #969696
$arrow-color:                   $current-color
$flagged-border-color:          $current-color
$cell-border-color:             #dedede
$notes-background-color:        #fffae2



//$danger-exon-color:              rgba(175, 180, 43, .5)
//$danger-exon-border-color:       rgba(175, 180, 43, .9)
//$coverage-problem-color:         rgba(175, 180, 43, .75)
//$coverage-problem-region-color:  rgba(175, 180, 43, .5)
//$coverage-problem-tooltip-color: rgb(175, 180, 43)

$danger-exon-color:              rgba(84, 164, 221, .5)
$danger-exon-border-color:       rgba(68, 116, 152, .75)
$coverage-problem-color:         rgba(68, 116, 152, .75)
$coverage-problem-region-color:  $danger-exon-color
$coverage-problem-tooltip-color: rgb(71, 172, 248)
$coverage-problem-glyph-color:   rgb(35, 138, 211)

$danger-color:                    #b32f2f
$warning-background-color:        rgb(217, 123, 123)
$warning-border-color:            #b67272


$called-variant-color:          $coverage-problem-color
$called-variant-color-darker:   $coverage-problem-color
$loaded-variant-color:          $app-gray


$hom-color:                       rgba(173, 38, 38, 0.65)
$het-color:                       rgb(181, 181, 181)
$homref-color:                    rgb(216, 216, 216)

$bookmark-color:                  #3773A7


$app-font:                'Poppins', sans-serif
$iobio-font:              'Poppins', sans-serif



$high-impact-color:       #ac1113
$moderate-impact-color:   #ec9d2c
$modifier-impact-color:   #f9e4b5
$low-impact-color:        rgba(181, 207, 107, 0.65)


$level-high-color:        $high-impact-color
$level-likely-high-color: rgba(220, 78, 78, .81)
$level-medium-color:      rgba(231, 186, 82, 1)
$level-low-color:         rgba(181, 207, 107, 1)
$level-likely-low-color:  rgba(163, 183, 104, 1)
$level-conflicting-color: rgb(111, 182, 180)
$level-other-color:       rgb(189, 189, 189)


$significant-color:            #831b1c
$unknown-significance-color:   $level-likely-high-color
$not-significant-color:        #b1b2ae
$not-reviewed-color:           #858585

$tour-button-color:      #E45C5C

$gene-box-color:         rgba(93, 128, 157, 0.63)
$gene-box-border-color:  rgb(93, 128, 157)
$tour-background-color:  rgba(81, 77, 77, 0.9)
$tour-data-button-color: #989898
$tour-hilite-color:      #E45C5C
$tour-theme-color:     #1D287B


$clinvar-path-color:     $high-impact-color
$clinvar-lpath-color:    $level-likely-high-color
$clinvar-uc-color:       rgba(231,186,82,1)
$clinvar-benign-color:   rgba(156,194,49,1)
$clinvar-lbenign-color:  rgba(181,207,107,1)
$clinvar-other-color:    rgb(189,189,189)
$clinvar-cd-color:       rgb(111, 182, 180)

