Change insufficient coverage color to stand out more.  Fix alignment for filter badges.

--- a/client/assets/sass/_variables.sass
+++ b/client/assets/sass/_variables.sass
@@ -74,18 +74,13 @@ $notes-background-color:        #fffae2
 
 
 
-//$danger-exon-color:              rgba(175, 180, 43, .5)
-//$danger-exon-border-color:       rgba(175, 180, 43, .9)
-//$coverage-problem-color:         rgba(175, 180, 43, .75)
-//$coverage-problem-region-color:  rgba(175, 180, 43, .5)
-//$coverage-problem-tooltip-color: rgb(175, 180, 43)
 
-$danger-exon-color:              rgba(84, 164, 221, .5)
-$danger-exon-border-color:       rgba(68, 116, 152, .75)
-$coverage-problem-color:         rgba(68, 116, 152, .75)
+$danger-exon-color:              rgba(228, 101, 101, .5)
+$danger-exon-border-color:       rgba(228, 101, 101, .75)
+$coverage-problem-color:         rgba(228, 101, 101, 1)
 $coverage-problem-region-color:  $danger-exon-color
-$coverage-problem-tooltip-color: rgb(71, 172, 248)
-$coverage-problem-glyph-color:   rgb(35, 138, 211)
+$coverage-problem-tooltip-color: rgb(228, 101, 101)
+$coverage-problem-glyph-color:   rgb(228, 101, 101)
 
 $danger-color:                    #b32f2f
 $warning-background-color:        rgb(217, 123, 123)
